Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-5124

Wrong line endings in Qt Quick App

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • Qt Creator 2.2.0, Qt Creator 2.2.1, Qt Creator 2.3.0
    • Quick / QML Support
    • Windows Vista x64

    Description

      Use the wizard to create a new Qt Quick App. Then open the pro-file or main.cpp from the project in Notepad. Line endings will not show up correctly. Looks like the files are being written with UNIX-style line endings.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kkohne Kai Köhne
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes