MobileAppWizards: Use correct line endings on Windows

Make sure the generated .cpp, .pro files use CRLF on Windows.

Task-number QTCREATORBUG-5124

Change-Id: I3b47a347f1da62f3c654a91720ccc23024b774be
Reviewed-on: http://codereview.qt.nokia.com/1931
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Alessandro Portale <alessandro.portale@nokia.com>